<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorText"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary2"
        app:navigationIcon="@drawable/ic_action_back"
        app:title="Sign In"
        app:titleTextColor="@color/colorText" />

    <TextView
        android:id="@+id/signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/text_sign_in"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_text"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_action_user"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawablePadding="8dp"
        android:hint="@string/hint_enter_your_email_or_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"/>

    <EditText
        android:id="@+id/password_one"
        android:layout_width="373dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_action_pass"
        android:drawableLeft="@drawable/ic_action_pass"
        android:hint="@string/hint_enter_your_password"
        android:drawablePadding="8dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"/>


    <TextView
        android:id="@+id/sign_in"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/text_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/text_new_click_here_to_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorAccent" />


</LinearLayout>