<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorText"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:drawable="@drawable/devo">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_action_back"
            app:title="Sign Up"
            app:titleTextColor="@color/colorText"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@color/colorPrimary2"
            app:srcCompat="@drawable/devo" />

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="Sign Up"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_text"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorAccent"
            android:drawableStart="@drawable/ic_action_user"
            android:drawableLeft="@drawable/ic_action_user"
            android:drawablePadding="8dp"
            android:hint="@string/hint_enter_your_username"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorAccent"
            android:drawableStart="@drawable/ic_action_email"
            android:drawableLeft="@drawable/ic_action_email"
            android:drawablePadding="8dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/password_one_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="Password"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:visibility="visible" />

        <EditText
            android:id="@+id/password_two_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_one_layout"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="Confirm Password"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />


        <TextView
            android:id="@+id/register_text"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/password_two_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/text_register"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_text"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="Already registered login here"
            android:textColor="@color/colorAccent" />


    </RelativeLayout>
</androidx.core.widget.NestedScrollView>

